# gems

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  adapters.html  completions.html  configuration.html  development.html  filesystem.html  formatting.html  genindex.html  hatch_build.py  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tools.html  zettel.html
.doctrees/: adapters.doctree  completions.doctree  configuration.doctree  development.doctree  environment.pickle  filesystem.doctree  formatting.doctree  index.doctree  tools.doctree  zettel.doctree
.doctrees/tools/: bim.doctree  dot.doctree  fctracker.doctree  fren.doctree  hello-world.doctree  morph.doctree  muc.doctree  netscan.doctree  outlookctl.doctree  pidash.doctree  pinger.doctree  puc.doctree  readerctl.doctree  sysup.doctree  vuc.doctree  zseq.doctree
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  publish.yml  test.yml  update-snapshots.yml
_sources/: configuration.rst.txt  development.rst.txt  tools.rst.txt  zettel.rst.txt
_sources/tools/: dot.rst.txt  morph.rst.txt  muc.rst.txt  outlookctl.rst.txt  pidash.rst.txt  readerctl.rst.txt  sysup.rst.txt  zseq.rst.txt
dev/: pin_deps.py  scaffold.py
docs/source/: bim-query-examples.md  completions.rst  conf.py  configuration.rst  development.rst  filesystem.rst  index.rst  tools.rst  zettel.rst
docs/source/tools/: bim.rst  dot.rst  fctracker.rst  fren.rst  hello-world.rst  netscan.rst  pidash.rst  pinger.rst  puc.rst  sysup.rst  vuc.rst
docs/superpowers/plans/: 2026-03-16-pidash.md
docs/superpowers/specs/: 2026-03-16-pidash-design.md
src/rust/: Cargo.toml  pyproject.toml
src/rust/src/: lib.rs  pybridge.rs  scanner.rs  types.rs
src/rust/src/consistency/: defaults.rs  fixers.rs  mod.rs
src/rust/src/migration/: mod.rs  move_tag_to_tags.rs  move_zkn_id.rs  normalize_type.rs  project.rs
src/rust/src/parser/: back_matter.rs  enrichment.rs  front_matter.rs  key_normalizer.rs  mod.rs  sections.rs
src/tools/bim/: __main__.py  cli.py  dependencies.py  manifest.toml  settings.py
src/tools/dot/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/fctracker/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/fren/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/hello_world/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/morph/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/muc/: __init__.py  __main__.py  cli.py  manifest.toml  settings.py
src/tools/netscan/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/outlookctl/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/pidash/: __main__.py  cli.py  manifest.toml
src/tools/pinger/: __init__.py  __main__.py  cli.py  manifest.toml  settings.py
src/tools/puc/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/readerctl/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/sysup/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/vuc/: __main__.py  cli.py  manifest.toml  settings.py
src/tools/zseq/: __main__.py  cli.py  manifest.toml  settings.py
tests/: conftest.py
tests/dev/: test_check_tool_wiring.py  test_scaffold.py
tests/lib/: conftest.py
tests/lib/pybase/: test_adapters_init.py  test_adapters_init_extra.py  test_back_matter_preprocessor.py  test_generators.py  test_manifest.py  test_manifest_extra.py  test_merge_mac_metadata.py  test_result.py
tests/lib/zettel/: test_markdown_helpers.py  test_output_formatter.py  test_template_loader.py
tests/lib/zettel_integrations/: test_assembler.py
tests/tools/bim/: conftest.py  test_archive_note.py  test_bim_cli.py  test_bim_cli_handlers.py  test_bim_query.py  test_cli.py  test_create_note.py  test_create_note_batch.py  test_delete_note.py  test_dependencies.py  test_edit_note.py  test_edit_note_extra.py  test_format_note.py  test_import_note.py  test_query.py  test_serve.py  test_show_note.py  test_sync_note.py
tests/tools/dot/: conftest.py  test_add.py  test_browse_commands.py  test_browse_screen.py  test_cli.py  test_commit.py  test_commit_modal.py  test_delete.py  test_diff_view.py  test_dir_list.py  test_dot_cli.py  test_dot_commands.py  test_encrypt.py  test_file_list.py  test_git_ops.py  test_gitignore_modal.py  test_models.py  test_patch.py  test_pull.py  test_push.py  test_rm.py  test_run.py  test_secrets_commands.py  test_secrets_screen.py  test_status.py  test_status_bar.py  test_tui_app.py  test_tui_snapshots.py  test_unstage.py
tests/tools/fctracker/: test_account.py  test_balance.py  test_cli.py  test_deposit.py  test_fctracker_cli_extra.py  test_fctracker_commands.py  test_queue.py  test_transactions.py  test_transactions_dir_scanner.py  test_transactions_reader.py  test_withdrawal.py
tests/tools/fren/: test_cli.py  test_directorize.py  test_flatten.py  test_fren_cli.py  test_fren_commands.py  test_normalize.py  test_slug.py
tests/tools/hello_world/: test_cli.py  test_diagnostics.py  test_hello_world_cli_extra.py  test_hello_world_commands.py  test_list_fonts.py  test_print_figlet.py
tests/tools/morph/: test_cli.py  test_deblank.py  test_deblank_extra.py  test_html2md.py  test_morph_cli.py  test_morph_commands.py
tests/tools/muc/: test_cli.py  test_cover.py  test_dir_tree.py  test_dir_tree_symlink_security.py  test_limit.py  test_limit_extra.py  test_merge_mac_metadata.py  test_muc_cli_extra.py  test_muc_commands.py  test_safe_rglob.py  test_tidy.py
tests/tools/netscan/: test_cli.py  test_hosts.py  test_netscan_cli.py  test_network.py  test_ssh.py
tests/tools/outlookctl/: test_cli.py  test_create_timeblock.py  test_outlookctl_cli_extra.py  test_outlookctl_commands.py
tests/tools/pidash/: conftest.py  test_app.py  test_cli.py  test_state.py  test_tui_snapshots.py  test_watcher.py  test_widgets.py
tools/: bim.html  dot.html  fctracker.html  fren.html  hello-world.html  morph.html  muc.html  netscan.html  outlookctl.html  pidash.html  pinger.html  puc.html  readerctl.html  sysup.html  vuc.html  zseq.html
(+540 files in other folders)
