[package]
name = "zettel-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
rayon = "1.10"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
bincode = { version = "2", features = ["serde"] }
